--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <p class="text-danger d-none" id="wrongMssg">your email or password is incorrect!</p>
             <button id="login-btn" class="btn btn-outline-info w-100 my-3">Login</button>
             <div class="d-flex justify-content-center mt-3 text-white">
-                <p>Don't have an account?</p>
+                <p>Don't have account?</p>
                 <a href="signup.html" class="text-decoration-none ps-2">Sign up</a>
             </div>
         </div>
