--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
 <body>
 
     <nav
-        class="navbar navbar-expand-sm navbar-dard bg-dark"
+        class="navbar navbar-expand-lg navbar-dard bg-dark"
     >
         <div class="container">
             <a class="navbar-brand text-white" href="#">SMART LOGIN</a>
